--- a/PHP/UT02-04-Formularios/calculadora.html
+++ b/PHP/UT02-04-Formularios/calculadora.html
@@ -2,7 +2,7 @@
     <HEAD><TITLE> EJ1 - FORMULARIOS</TITLE></HEAD>
     <BODY>
         <h1>CALCULADORA</h1>
-        <form name="calculadora" action="./calculadora.php" method="get">
+        <form name="calculadora" action="./calculadora.php" method="post">
             Operando1: <input type="text" name="operando1" value="" size="15"/>
 
             <br><br>
