--- a/PHP/UT02-04-Formularios/binario.html
+++ b/PHP/UT02-04-Formularios/binario.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>CONVERSOR BINARIO</h1>
-    <form name="binario" action="./binario.php" method="get">
+    <form name="binario" action="./binario.php" method="post">
         Numero Decimal: <input type="text" name="numDecimal" value="" size="15"/>
 
         <br><br>
