--- a/PHP/UT02-04-Formularios/cambiobase.html
+++ b/PHP/UT02-04-Formularios/cambiobase.html
@@ -5,7 +5,7 @@
     </HEAD>
     <BODY>
         <h1>CONVERSOR NUMERICO</h1>
-        <form name="cambiobase" action="./cambiobase.php" method="get">
+        <form name="cambiobase" action="./cambiobase.php" method="post">
             Numero Decimal: <input type="text" name="num" value="" size="15"/>
 
             <br><br>
