--- a/PHP/UT02-04-Formularios/basen.html
+++ b/PHP/UT02-04-Formularios/basen.html
@@ -8,7 +8,7 @@
 <body>
  
     <h1>Cambio de Base</h1>
-    <form name="basen" action="./basen.php" method="get">
+    <form name="basen" action="./basen.php" method="post">
         Numero: <input type="text" name="num" value="" size="15"/>
      
         <br><br>
